force-app/main/default/objects/Product__c/fields/Automatic_Type__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Type__c</fullName>
    <label>Automatic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semi</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>