force-app/main/default/objects/Product__c/fields/Capacity_in_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Capacity_in_Kgs__c</fullName>
    <label>Capacity (in Kgs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Kg</fullName>
            </value>
            <value>
                <fullName>6.5 Kg</fullName>
            </value>
            <value>
                <fullName>7 Kg</fullName>
            </value>
            <value>
                <fullName>8 Kg</fullName>
            </value>
            <value>
                <fullName>10 Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>