force-app/main/default/objects/Product__c/fields/Smart_TV__c.field-meta.xml
<CustomField>
    <fullName>Smart_TV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smart TV</label>
    <type>Checkbox</type>
</CustomField>