force-app/main/default/objects/Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>Front Load</fullName>
            </value>
            <value>
                <fullName>Top Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>