force-app/main/default/objects/Product__c/fields/Warranty_Period_in_years__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_in_years__c</fullName>
    <label>Warranty Period (in years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>