force-app/main/default/objects/Product__c/recordTypes/TV.recordType-meta.xml
<RecordType>
    <fullName>TV</fullName>
    <active>true</active>
    <description>TV products</description>
    <label>TV</label>
</RecordType>