force-app/main/default/objects/Product__c/recordTypes/Washing_Machine.recordType-meta.xml
<RecordType>
    <fullName>Washing_Machine</fullName>
    <active>true</active>
    <description>Washing Machine Products</description>
    <label>Washing Machine</label>
</RecordType>